# B.I.E.R

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: block-random.yaml
OLD/TEMP/: CHECKLISTE.md
docs/: application_architecture.md  architecture.md  changelog.md  changelog_Gvozdenac.md  changelog_template.md  contracts.md  known_issues.md  retrospective.md  style_guide.md  tests.md
docs/changelogs/: changelog_dragoljub.md  changelog_emir.md  changelog_mateja.md  changelog_paul.md
src/bierapp/: __init__.py  contracts.py
src/bierapp/adapters/: postgress_repositorsy.py
src/bierapp/backend/: __init__.py  app.py  inventory_service.py  models.py  product_service.py  service.py  services.py  utils.py  warehouse_service.py
src/bierapp/contracts/: __init__.py  database_port.py  http_port.py  inventory_port.py  product_port.py  report_port.py  warehouse_port.py
src/bierapp/controller/: app.js
src/bierapp/db/: __init__.py  mongodb.py  postgress.py
src/bierapp/frontend/: __init__.py
src/bierapp/reports/: __init__.py  inventory_report.py  pdf_report.py  report_a.py  report_b.py  report_format.py  statistics_report.py
src/lagerverwaltung/: __init__.py
src/lagerverwaltung/backend/: __init__.py
src/reports/: __init__.py  dummy_data.json  report_a.py  report_b.py  report_format.py
src/ui/: gui.py
tests/: conftest.py
tests/integration/: test_flask.py  test_gradio.py  test_integration.py  test_mongodb.py  test_reports.py
tests/unit/: test_domain.py  test_reports.py
(+51 files in other folders)
