[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projekt-verwaltung"
version = "0.1.0"
description = "Verwaltungssoftware für Lagerverwaltung/Produktmanagement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pymongo>=4.6.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pylint>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "bierapp",
    "bierapp.backend",
    "bierapp.db",
    "bierapp.db.init",
    "bierapp.frontend",
    "bierapp.frontend.flask",
    "bierapp.reports",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]

[tool.pylint.design]
max-attributes = 7
max-args = 6
max-locals = 15
